--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
+   
+
 
 }
 
@@ -43,4 +46,18 @@ nav li {
     list-style: none;
     margin-right: 50px;
     color: #181818;
+}
+/* header related styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+padding: 30px 30px 30px 150px;
+display: flex;
+align-items: center;
+
+}
+.banner .profile-pic{
+    width: 500px;
+
 }
